# openme

./: CHANGES.txt  CONTRIBUTIONS.txt  README.md
examples/ck-java/: ck_java_test.java  compile.bat  compile.sh  run.bat  run.sh
examples/interactive-compilers/gcc-4.6.3/etc/gcc-4.6.3/gcc/: loop-unroll.c  main.c
examples/interactive-compilers/llvm-3.2/llvm-3.2.src/: CMakeLists.txt
examples/interactive-compilers/llvm-3.2/llvm-3.2.src/lib/Transforms/Scalar/: LoopUnrollPass.cpp
examples/interactive-compilers/llvm-3.2/llvm-3.2.src/tools/bugpoint/: CMakeLists.txt
examples/interactive-compilers/llvm-3.2/llvm-3.2.src/tools/clang/: CMakeLists.txt
examples/interactive-compilers/llvm-3.2/llvm-3.2.src/tools/opt/: CMakeLists.txt
src/c/: ck-make.bat  ck-make.sh  openme.c
src/c-cpp-fortran/: ck-make.bat  openme.c  openme.h
src/c/example-plugin-ctuning/: ctuning.c
src/java/: README.txt  ck-make.bat  ck-make.sh  manual_compile.bat  manual_compile_android_win.bat  manual_compile_android_win.sh  manual_compile_win.bat  manual_compile_win.sh
src/java-android/org/ctuning/openme/: openme.java
src/java-ck/: manual_compile.sh  manual_compile_android.bat  manual_compile_android.sh
src/java-ck/org/openme_ck/: openme_ck.java
src/java-cm/: manual_compile_android.bat
src/java-cm-outdated/: README.txt  manual_compile.bat  manual_compile.sh  manual_compile_android.sh
src/java-cm-outdated/org/openme/: openme.java
src/java/org/openme/: openme.java
src/java/org/openme_ck/: openme_ck.java
src/php/: README.txt  ck_web.php  cm-s.php  cm.php
src/php-cm/: README.txt
(+9 files in other folders)
